<resources>
    <string name="app_name">Paint</string>
    <string name="Color">color</string>
    <string name="Save">Save</string>
    <string name="lineWidth">Line Width</string>
    <string name="erase">Erase</string>
    <string name="clear">Clear</string>
    <string name="brushWidth">BrushWidth</string>
    <string name="huiSosiId">HuiSosiId</string>
    <string name="set_width">SET WIDTH</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="set_color">Set Color</string>
    <string name="shape">Shaoe</string>
    <string name="rectangleShape">rectangleShape</string>
    <string name="circleShape">circleShape</string>
    <string name="triangleShape">triangleShape</string>
    <string name="lineShape">lineShape</string>
</resources>